<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"/>

        <TextView android:text="@string/app_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/cur_location_button"
            android:onClick="changeViewLocation" />

        <EditText
            android:id="@+id/zip_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip_hint"
            android:inputType="number" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/zip_button"
            android:onClick="changeViewZip" />

    </LinearLayout>

</LinearLayout>
