<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.echiou.represent.CongressionalViewActivity">

    <TextView android:id="@+id/header"
        android:text="@string/loc_filler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp" />

    <TextView android:id="@+id/inst"
        android:text="@string/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView android:id="@+id/rep_header"
        android:text="@string/rep_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <ListView android:id="@+id/replistview"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp">
    </ListView>

    <TextView android:id="@+id/sen_header"
        android:text="@string/sen_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <ListView android:id="@+id/senlistview"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp">
    </ListView>

</LinearLayout>
